src/tests/ci/assignment_5_functions/valid/13_function_char_param.c
int char_to_int(char c) {
    return c - '0';
}

int main() {
    int digit = char_to_int('5');
    return digit;
}