src/tests/ci/assignment_5_functions/invalid_semantic/07_argument_type_mismatch.c
int add(int a) {
    return a;
}

int main() {
    int* p;
    add(p);
    return 0;
}